--- a/prom-deployment.yaml
+++ b/prom-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: prom-deployment
-        image: christineacr.azurecr.io/temp_prometheus:v0
+        image: christineacr.azurecr.io/pushprox_prometheus_v5
         ports:
         - containerPort: 9090
