--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,7 +2,7 @@ global:
   scrape_interval: 5s
   evaluation_interval: 5s
 scrape_configs:
-  - job_name: 'kube-dns'
+  - job_name: 'kube-scheduler'
     proxy_url: http://proxy:8080/
     static_configs:
-      - targets: ['core-dns.kube-system.svc:9153']
+      - targets: ['172.24.1.48:10251']
