--- a/PushProx_StandaloneTest/AKS_Deployment/proxy.yaml
+++ b/PushProx_StandaloneTest/AKS_Deployment/proxy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pushproxy-deployment
+  namespace: kube-system
   labels:
     app: pushproxy-deployment
 spec:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
       - name: pushproxy-deployment
-        image: christinehacr.azurecr.io/pushprox_proxy-binary
+        image: christineacr.azurecr.io/pushprox_proxy # UPDATE
         command: ['/app/pushprox-proxy']
         ports:
           - containerPort: 8080
@@ -25,6 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: proxy
+  namespace: kube-system
 spec:
   selector:
     app: pushproxy-deployment
