--- a/PushProx_StandaloneTest/AKS_Deployment/client.yaml
+++ b/PushProx_StandaloneTest/AKS_Deployment/client.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: client
-  namespace: $apiserver-namespace # needs to be changed
+  namespace: 62fa842737ed3d00012e9319 # needs to be changed
   labels:
     app: client
 spec:
@@ -17,7 +17,6 @@ spec:
     spec:
       containers:
       - name: client
-        image: chacr.azurecr.io/pushprox_client_v2
-        command: ['/app/pushprox-client', '--proxy-url=http://10.0.84.15:8080', '--fqdn=172.24.4.28', '--connect-ip=172.24.0.54', '--connect-port=10001'] # proxy url is the service, fqdn is the port of component, connect ip is apiserver port, connect port is envoy port
+        image: christineacr.azurecr.io/pushprox_client_v3
+        command: ['/app/pushprox-client', '--proxy-url=http://10.0.84.15:8080', '--fqdn=172.24.4.28', '--connect-ip=172.24.1.60', '--connect-port=10001']
         ports:
-        - containerPort: 1111
