--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,4 +5,8 @@ scrape_configs:
   - job_name: 'kube-scheduler'
     proxy_url: http://proxy:8080/
     static_configs:
-      - targets: ['172.24.4.28:10251']
+      - targets: ['kube-scheduler:10251']
+  - job_name: 'kube-controller-manager'
+    proxy_url: http://proxy:8080/
+    static_configs:
+      - targets: ['kube-controller-manager:10257']
